Cleaned up the data cleaning section

--- a/2 - Data Cleaning.ipynb
+++ b/2 - Data Cleaning.ipynb
@@ -771,11 +771,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "From this a lot of empty strings can be seen for information relating to the artist. 90% of the artists are unknown. I am not going to delete rows missing this information but rather do a smaller analysis on known artist after looking at other aspects of the collection."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dates are formatable and are currently "
+   ]
   }
  ],
  "metadata": {
